shufl-web/src/app/components/album/album.component.scss
.card-container {
    min-height: 250px;

    .card {
        opacity: 0;
    }

    &.modal {
        position: unset;
        left: 0;
        top: 0;
        right: 0;
        bottom: 0;

        .card {
            padding: 0;
            margin: 0;

            -webkit-transition: none;
            -moz-transition: none;
            transition: none;

            .album-info-container {
                .album-cover {
                    img {
                        width: 175px;
                        height: 175px;
                    }
                }

                .artists-container {
                    .artist-link {
                        pointer-events: none;
                    }
                }
            }

            .action-buttons-container {
                height: 210px;

                margin: 10px 10px;

                display: flex;
                flex-direction: column;

                opacity: 0;

                pointer-events: none;

                &.visible {
                    opacity: 1;

                    pointer-events: initial;
                }

                * {
                    margin-bottom: 5px;
                }
            }
        }
    }
}

